--- a/docs/styles.epub.css
+++ b/docs/styles.epub.css
@@ -93,13 +93,26 @@ section.footnotes{
 }
 
 
-blockquote{
-
+div.cover, div.halftitle, div.title, div.publications {
+    text-align:center;
 }
 
-a { 
+img.cover, img.halftitle, img.title {
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
 }
 
+
+div.fig{
+    width:100%;
+}
+
+
+img.fig {
+    max-width:900px;
+}
 
 
 a.footnoteRef {
@@ -108,3 +121,18 @@ line-height: normal;
 font-size: 0.5em;
 }
 
+
+blockquote{
+
+}
+
+a { 
+}
+
+hr {
+}
+
+
+ul{ /* Contents index*/
+
+}
