--- a/docs/styles.epub.css
+++ b/docs/styles.epub.css
@@ -64,13 +64,12 @@ h1,h2,h3,h4{
 }
 
 h1{
-    font-size:2em;
+    font-size:1.8em;
     color: #f23f4e;
 }
 
 h2{
-    font-size:1em;
-    line-height: 0em;
+    font-size:1.4em;
     margin-top: 2em;
 }
 
@@ -98,11 +97,11 @@ div.cover, div.halftitle, div.title, div.publications, div#cover-image {
     text-align:center;
 }
 
-img.cover, img.halftitle, img.title {
-    max-width: 100%;
-    max-height: 100%;
-    width: auto;
-    height: auto;
+img.cover, img.halftitle, img.title{
+    /* max-width: 100%; */
+    /* max-height: 100%; */
+    /* width: auto; */
+    /* height: auto; */
 }
 
 
@@ -124,7 +123,7 @@ font-size: 0.5em;
 
 
 blockquote{
-
+    font-size: 0.8em;
 }
 
 a { color: #f23f4e;
@@ -142,7 +141,7 @@ a:hover { color: #f23f4e;
     margin-right: auto;
     text-align: center;
     font-weight: bold;
-    font-size: 1.25em;
+    font-size: 1.15em;
     color: #f23f4e;
 
     }
@@ -158,14 +157,15 @@ hr {
     font-size: 3em;
     border-left: none;
     border-right: none;
+    margin-top:10px;
 }
 
-hr.streams{
+hr.streams {
     width: 15%;
 }
 
 
-ul{ /* Contents index*/
-
+ul {
+ list-style-type: none;
+ list-style: none; 
 }
-
